# FILM69

./: README.md  pyproject.toml  requirements.txt  setup.py
FILM69/: __init__.py  data_classification.py  pydantic_from_json.py
FILM69/agent/: agent.py
FILM69/datasets/: __init__.py
FILM69/encode/: __init__.py  encodec.py
FILM69/flet/assistant/: message.py  timer.py
FILM69/iot/: Modbus.py  __init__.py  tb.py
FILM69/llm/: __init__.py  convert_to_gguf.py  data_collator.py  em.py  multi_vector_db.py  requires_memory.py  vectordb.py
FILM69/llm/encode/: encodec.py
FILM69/llm/fast_model/: __init__.py  auto_model.py  fast_llm.py  fast_model.py  fast_vision.py
FILM69/llm/langchain/: __init__.py  fast_langchain_chatllm.py  fast_langchain_llm.py  lang_chain_fast_llm.py  vector_store_oracle_deeplake.py
FILM69/llm/mcp_agent/: __init__.py  mcp_agent.py
FILM69/llm/unsloth_zoo/: saving_utils.py
FILM69/ml/: __init__.py  data_classification.py  llama.py  llm_rag_chromadb.py  model.py  requires_memory.py  vectordb.py
FILM69/ml/encode/: encodec.py
FILM69/ml/fast_model/: __init__.py  fast_llm.py  fast_vision.py
FILM69/ml/langchain/: __init__.py  lang_chain_fast_llm.py
FILM69/stt/: __init__.py  whisper.py
FILM69/tools/: DisPrint.py  __init__.py  clean_text.py  pydantic_from_json.py  torch_tools.py
FILM69/tts/: __init__.py  gennerate.py  model.py  train.ipynb
FILM69/tts/f5_tts/: api.py
FILM69/tts/f5_tts/eval/: eval_infer_batch.py  eval_librispeech_test_clean.py  eval_seedtts_testset.py  utils_eval.py
FILM69/tts/f5_tts/infer/: infer_cli.py  infer_gradio.py  speech_edit.py  utils_infer.py
FILM69/tts/f5_tts/model/: __init__.py  cfm.py  dataset.py  trainer.py  utils.py
FILM69/tts/f5_tts/model/backbones/: dit.py  mmdit.py  unett.py
FILM69/tts/f5_tts/scripts/: count_params_gflops.py
FILM69/tts/f5_tts/train/: finetune_cli.py  finetune_gradio.py  train.py
FILM69/tts/f5_tts/train/datasets/: prepare_csv_wavs.py  prepare_emilia.py  prepare_wenetspeech4tts.py
FILM69/ui/: __init__.py
FILM69/ui/UI_bata/: app.py  ui.py
FILM69/ui/UI_bata/widget/: chat.py  message_card.py
FILM69/ui/assistant/: app.py  langflow_api.py  llm.py  message.py  ui.py
FILM69/ui/assistant/widget/: __init__.py  chat.py  message_card.py
FILM69/yolo/: yolo.py
film69/iot/: Modbus.py  tb.py
film69/ml/: __init__.py  convert_to_gguf.py  data_classification.py  llama.py  llm_rag.py  localmodel.py  model.py  vectordb.py  whisper.py
film69/ml/auto_model/: auto_llm.py  auto_llm_vision.py  auto_model.py  format.py
film69/ml/fast_model/: __init__.py  auto_model.py  chat_templates.py  fast_llm.py  fast_vision.py  save.py  tokenizer_utils.py  trainer.py
film69/ml/fast_model/kernels/: __init__.py  cross_entropy_loss.py  fast_lora.py  flex_attention.py  geglu.py  rms_layernorm.py  rope_embedding.py  swiglu.py  utils.py
film69/ml/fast_model/models/: __init__.py  _utils.py  dpo.py  gemma.py  gemma2.py  llama.py  loader.py  mistral.py
unsloth/unsloth_zoo/: saving_utils.py
