[project]
name = "film69"
version = "0.4.0"
description = ""  # Add your package's description here
authors = [
    { name = "Watcharaphon Pamayayang", email = "filmmagic45@gmail.com" }
]
urls = { Homepage = "https://github.com/watcharaphon6912" }


[project.dependencies]
# You can list base dependencies here if needed
# For example:
# numpy = "*"

[project.optional-dependencies]
all = [
    "setuptools",
    "setuptools-scm",
    "packaging",
    "tyro",
    "transformers>=4.44.2",
    "datasets",
    "sentencepiece",
    "tqdm",
    "psutil",
    "wheel",
    "numpy",
    "accelerate",
    "trl",
    "peft",
    "protobuf",
    "huggingface-hub",
    "hf-transfer",
    "bitsandbytes",
    "xformers",
    "ninja",
    "minimalmodbus",
    "sentence-transformers",
    "llama-index-vector-stores-milvus",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "pymilvus",
    "openai",
    "pandas",
    "openpyxl",
    "triton"
]

rag = [
    "pymilvus",
    "openai",
    "transformers>=4.44.2",
    "sentence-transformers",
    "numpy",
    "pandas",
    "openpyxl"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
